{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 439,
  "lineage": "21296666-d29e-31fe-7e28-71e4f87edf25",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c68b55d1c875067e",
            "arn": "arn:aws:ec2:eu-west-1:077839647469:instance/i-064e3d1667a318dea",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064e3d1667a318dea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01594a28f61e1421d",
            "private_dns": "ip-10-0-10-68.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de6114ec32ed6518",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027473ca9f99f1c8e",
            "tags": {
              "Name": "MyPC"
            },
            "tags_all": {
              "Name": "MyPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a65e7818aa386406"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.ssh_1",
            "module.network.aws_security_group.sg_web",
            "module.network.aws_subnet.subnet_a",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00472918d1dcc1b06",
            "association_id": "eipassoc-0c2fabd147fc3f23a",
            "domain": "vpc",
            "id": "eipalloc-00472918d1dcc1b06",
            "instance": "i-064e3d1667a318dea",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-01594a28f61e1421d",
            "private_dns": "ip-10-0-10-68.eu-west-1.compute.internal",
            "private_ip": "10.0.10.68",
            "public_dns": "ec2-18-200-136-63.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.136.63",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.instances.aws_instance.web_1",
            "module.instances.aws_key_pair.ssh_1",
            "module.network.aws_security_group.sg_web",
            "module.network.aws_subnet.subnet_a",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:internet-gateway/igw-0cbcf810a1e718135",
            "id": "igw-0cbcf810a1e718135",
            "owner_id": "077839647469",
            "vpc_id": "vpc-0ba05d60f7d126876"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cbcf810a1e718135",
            "id": "r-rtb-0c615352cd9fe5c141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c615352cd9fe5c14",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw_1",
            "module.network.aws_route_table.def_route_1",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "def_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:route-table/rtb-0c615352cd9fe5c14",
            "id": "rtb-0c615352cd9fe5c14",
            "owner_id": "077839647469",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba05d60f7d126876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f5b82de7ffe03b",
            "route_table_id": "rtb-0c615352cd9fe5c14",
            "subnet_id": "subnet-027473ca9f99f1c8e"
          },
          "dependencies": [
            "module.network.aws_route_table.def_route_1",
            "module.network.aws_subnet.subnet_a",
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:security-group/sg-0a65e7818aa386406",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a65e7818aa386406",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_web",
            "name_prefix": "",
            "owner_id": "077839647469",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TLS"
            },
            "tags_all": {
              "Name": "TLS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba05d60f7d126876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:subnet/subnet-027473ca9f99f1c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027473ca9f99f1c8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077839647469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ba05d60f7d126876"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077839647469:vpc/vpc-0ba05d60f7d126876",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7ad7aa9890a57d4",
            "default_route_table_id": "rtb-051b6b2096b972dbe",
            "default_security_group_id": "sg-00d6ddf51928c9c37",
            "dhcp_options_id": "dopt-090981eb647dc7ba3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba05d60f7d126876",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051b6b2096b972dbe",
            "owner_id": "077839647469"
          }
        }
      ]
    }
  ]
}